# starva

./: .gitignore  CMakeLists.txt  LICENSE  README.md
examples/: 10k-run.fit  80k-ride.fit  interval-run.fit
include/: activity.hpp  fitParser.hpp  mapGenerator.hpp  recordListener.hpp  routePoint.hpp
src/: activity.cpp  fitParser.cpp  main.cpp  mapGenerator.cpp  recordListener.cpp
